--- a/index.html
+++ b/index.html
@@ -14,29 +14,20 @@
 <body>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-database.js"></script>
 
     <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#config-web-app -->
 
-    <script>
-        // Your web app's Firebase configuration
-        var firebaseConfig = {
-            apiKey: "AIzaSyDP-2P7R_uS9kElyDOtp_LcxbokjUQTas4",
-            authDomain: "rps-6f750.firebaseapp.com",
-            databaseURL: "https://rps-6f750.firebaseio.com",
-            projectId: "rps-6f750",
-            storageBucket: "",
-            messagingSenderId: "1076858570398",
-            appId: "1:1076858570398:web:763c226e0b61801c"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-    </script>
-    <!-- Optional JavaScript -->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <!-- Optional JavaScript -->
+    <script src="assets/javascript/app.js"></script>
+
     <!--Start Page-->
     <div class="container">
         <div class="row justify-content-center">
@@ -49,11 +40,14 @@
                     <div class="col-4">
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title">PLayer 1</div>
-                                <div class="card">
-                                    <div class="rock">ROCK</div>
-                                    <div class="paper">PAPER</div>
-                                    <div class="scissors">SCISSORS</div>
+                                <div class="card-title">Player 1</div>
+                                <div class="card playerone">
+                                    <div class="play-game"><button>PLAY GAME</button></div>
+                                    <div class="choices">
+                                        <div class="rock">ROCK</div>
+                                        <div class="paper">PAPER</div>
+                                        <div class="scissors">SCISSORS</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -61,8 +55,8 @@
                     <div class="col-4">
                         <div class="card">
                             <div class="card-body">
-                                <div class="card-title"></div>
-                                <div class="card"></div>
+                                <div class="card-title">Game Status</div>
+                                <div class="card">Waiting for Player 2...</div>
                             </div>
                         </div>
                     </div>
@@ -70,7 +64,14 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="card-title">Player 2</div>
-                                <div class="card"></div>
+                                <div class="card playertwo">
+                                    <div class="play-game"><button>PLAY GAME</button></div>
+                                    <div class="choices">
+                                        <div class="rock">ROCK</div>
+                                        <div class="paper">PAPER</div>
+                                        <div class="scissors">SCISSORS</div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
