--- a/index.html
+++ b/index.html
@@ -1,84 +1,127 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title></title>
+  <head>
+    <title>Title</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-
-<body>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-database.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#config-web-app -->
-
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
 
     <!-- Optional JavaScript -->
-    <script src="assets/javascript/app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-database.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-    <!--Start Page-->
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col">
-                <div class="jumbotron">
-                    <h1 class="display-3">Rock, Paper & Scissors</h1>
-                    <p class="lead">Online 2-Player</p>
-                </div>
-                <div class="row">
-                    <div class="col-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="card-title">Player 1</div>
-                                <div class="card playerone">
-                                    <div class="play-game"><button>PLAY GAME</button></div>
-                                    <div class="choices">
-                                        <div class="rock">ROCK</div>
-                                        <div class="paper">PAPER</div>
-                                        <div class="scissors">SCISSORS</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="card-title">Game Status</div>
-                                <div class="card">Waiting for Player 2...</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="card-title">Player 2</div>
-                                <div class="card playertwo">
-                                    <div class="play-game"><button>PLAY GAME</button></div>
-                                    <div class="choices">
-                                        <div class="rock">ROCK</div>
-                                        <div class="paper">PAPER</div>
-                                        <div class="scissors">SCISSORS</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <body>
+    <div class="jumbotron">
+      <h1>Rock Paper Scissors</h1>
     </div>
-</body>
 
+    <div class="container text-center">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <div class="input-group" id="swap-zone">
+            <input class="form-control-lg" id="username" placeholder="Name" />
+            <div class="input-group-append">
+              <button class="btn btn-outline-primary" id="start">Start</button>
+            </div>
+          </div>
+        </div>
+        <div class="col"></div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="alert" id="current-turn"><h2></h2></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <div class="card border rounded" id="player1">
+            <h3 class="card-title" id="player1-name">Player 1</h3>
+            <ul class="list-group"></ul>
+            <div id="player1-chosen"></div>
+            <div class="card-body outcomes">
+              <div class="outcome-trackers" id="player1-wins"></div>
+              <div class="outcome-trackers" id="player1-losses"></div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="alert" id="result"><h2></h2></div>
+        </div>
+        <div class="col">
+          <div class="card border rounded" id="player2">
+            <h3 class="card-title" id="player2-name">Player 2</h3>
+            <ul class="list-group"></ul>
+            <div id="player2-chosen"></div>
+            <div class=" card-body outcomes">
+              <div class="outcome-trackers" id="player2-wins"></div>
+              <div class="outcome-trackers" id="player2-losses"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-2"></div>
+        <div class="col pt-2">
+          <div class="border rounded" id="chat">
+            <div
+              class="border rounded text-left p-1 m-2"
+              id="chat-messages"
+            ></div>
+            <div class="form-group input-group p-2" id="chat-bar">
+              <input
+                class="form-control-sm"
+                id="chat-input"
+                placeholder="Type messages here..."
+              />
+              <div class="input-group-append">
+                <button class="btn btn-outline-primary" id="chat-send">
+                  Send
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-2"></div>
+      </div>
+    </div>
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Script -->
+    <script src="assets/javascript/config.js"></script>
+    <script src="assets/javascript/app.js"></script>
+  </body>
 </html>
